[project]
name = "frida-ios-dump"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asn1crypto",
    "bcrypt",
    "cffi",
    "colorama",
    "cryptography",
    "enum34",
    "frida==16.7.19",
    "frida-tools==13.1.0",
    "idna",
    "ipaddress",
    "paramiko",
    "prompt-toolkit",
    "pyasn1",
    "pycparser",
    "Pygments",
    "PyNaCl",
    "scp",
    "six",
    "tqdm",
    "wcwidth",
]
